--- a/qos_bandwidth.adoc
+++ b/qos_bandwidth.adoc
@@ -87,11 +87,15 @@ allowing all available bandwidth blocks to be reserved for allocation, the
 bandwidth controller can handle such transient inaccuracies.
 ====
 
-If `RPFX` is 1, the controller uses `RCID` in the requests along with `P` least
-significant bits of the `MCID` carried in the request to compute an effective
-`MCID` (<<EMCID>>) to identify the monitoring counter. Valid values of `P` range
-from 0 to 12. If `RPFX` is 0, `P` is set to 0, and the effective `MCID` is the
-same as the `MCID` in the request.
+When the `RCID`-prefixed mode (`RPFX`) is 1, the controller operates in `RPFX` 
+mode. The parameter `P` (prefixed bits) indicates the number of least significant 
+bits of the `MCID` carried in the request that should be prefixed by the RCID. The 
+controller uses `RCID` in the requests along with `P` number of least significant 
+bits of the `MCID` to compute an effective `MCID` (<<EMCID>>). This `MCID` is used 
+to identify the monitoring counter. Legal values of `P` range from 0 to 12. 
+
+If `RPFX` is 0, `P` is set to 0, and the effective `MCID` is the same as the `MCID` 
+in the request.
 
 [[BC_MCTL]]
 === Bandwidth Usage Monitoring Control
